@@ -256,6 +256,10 @@ twice to output voluminous debugging information.
 Print less information while running.  This option may be specified
 twice to suppress all non-error output.
 .TP
+\fB--write-symbol-info\fR=\fIpath\fR
+Write symbol statistics and information about how symbols were
+converted to \fIpath\fR during CollateSymbolsPass.
+.TP
 \fB--skip-cleanup\fR
 Prevent the deletion of temporary files.
 .TP
